# estimaite

./: Dockerfile  Dockerfile.dev  Makefile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  dev.yml
backend/: .coverage  coverage.xml  manage.py
backend/estimaite/: asgi.py  settings.py  test_settings.py  test_settings_sqlite.py  urls.py  wsgi.py
backend/projects/: admin.py  forms.py  models.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_seed_quality_attribute_categories.py  0003_fix_quality_category_constraint.py
backend/projects/templates/projects/: feature_confirm_delete.html  feature_detail.html  feature_form.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html
backend/users/: admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
backend/users/management/commands/: create_tenant.py  setup_rls.py
backend/users/migrations/: 0001_initial.py
backend/users/templates/users/: base.html  home.html  login.html  profile.html  signup.html
