[project]
name = "estimaite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "psycopg[binary]>=3.2.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.8.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.isort]
profile = "black"
skip_glob = ["*/migrations/*"]
